crates/dsrs-macros/tests/ui/format_on_output.stderr
error: #[format] is removed. Use #[render(style = "...")] instead.
 --> tests/ui/format_on_output.rs:9:5
  |
9 |     #[format("json")]
  |     ^^^^^^^^^^^^^^^^^
