crates/dsrs-macros/tests/ui/format_on_output.rs
use dsrs_macros::Signature;

#[derive(Signature)]
struct BadFormatOutput {
    #[input]
    question: String,

    #[output]
    #[format("json")]
    answer: String,
}

fn main() {}
